# spio-old-designs

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml  build.sh  callgrind.out.10598  debug.sh  foo.cpp  stdin.c  test.cpp
01-master/: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  Time-pgXozIma-Oc.webm.part  appveyor.yml  build.sh  test.cpp
01-master/benchmark/: CMakeLists.txt  bench_readint.cpp  bench_writeint.cpp  bench_writestring.cpp  bench_writewstring.cpp  integers.txt
01-master/examples/: CMakeLists.txt  bufferio.cpp  stdio.cpp
01-master/include/spio/: CMakeLists.txt  buffering.h  config.h  custom_type.h  error.h  filehandle.h  input_parser.h  instream.h  instream.impl.h  outstream.h  readable.h  readable.impl.h  reader.h  reader_options.h  span.h  spio.h  stl.h  type.h  util.cpp  util.h  util.impl.h  writable.h  writable.impl.h  writer.h  writer.impl.h
01-master/tests/: CMakeLists.txt  instream.cpp  main.cpp  readable_buffer.cpp  spio.h  test.cpp  test_empty.cpp  test_input_parser.cpp  test_instream.cpp  test_outstream.cpp  test_readable_file.cpp  test_stdstream.cpp  test_writable_buffer.cpp  usertype.cpp
02-redesign/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  build.sh  debug.sh  run-examples.sh
02-redesign/benchmark/: CMakeLists.txt  bench_main.cpp  bench_readint.cpp  bench_readstring.cpp  bench_writestring.cpp
02-redesign/benchmark/old/: bench_writeint.cpp
02-redesign/examples/: bufferio.cpp  readme.cpp  stdio.cpp
02-redesign/include/spio/: buffered_device.h  buffering.h  codeconv.h  config.h  container_device.h  custom_type.h  device_stream.h  direct_stream.h  error.h  file_device.h  file_device.impl.h  filehandle.h  fmt.h  formatter.h  formatter.impl.h  fwd.h  indirect_device.h  instream.h  instream.impl.h  locale.h  memory_device.h  native_file_device.h  native_file_device_posix.impl.h  native_file_device_win32.impl.h  native_filehandle_posix.h  null_device.h  outstream.h  outstream.impl.h  readable.h  readable.impl.h  reader.impl.h  reader_options.h  scanner.h  scanner.impl.h  span.h  spio.h  stl.h  stream.h  stream.impl.h  stream_base.h  (+11 more)
02-redesign/include/spio/old/: custom_type.h  instream.h  instream.impl.h  readable.h  type.h  writable.impl.h  writer_options.h
02-redesign/tests/: CMakeLists.txt  buffering.cpp  device.cpp  error.cpp  instream.cpp  memory_device.cpp  small_vector.cpp  standard_streams.cpp  stream.cpp  stream_buffer.cpp  test.cpp  test_formatting.cpp  test_instream.cpp  test_readable_buffer.cpp  test_readable_file.cpp  test_reader.cpp  test_span.cpp  test_stdstream.cpp  test_util.cpp  test_writable_file.cpp  test_writer.cpp
02-redesign/tests/old/: formatting.cpp  readable_buffer.cpp
03-new/: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh  test.cpp
03-new/benchmark/: bench_readint.cpp  bench_readstring.cpp  bench_writeint.cpp  bench_writestring.cpp  bench_writewstring.cpp  strings.txt  writeint.txt
03-new/examples/: CMakeLists.txt  bufferio.cpp  main.cpp  readme.cpp  stdio.cpp
03-new/examples/old/: examples.h  readme.cpp  stdio.cpp
03-new/include/spio/: buffering.h  codeconv.h  config.h  container_device.h  custom_type.h  device.h  device_stream.h  direct_stream.h  error.h  file_device.h  file_device.impl.h  filehandle.h  filter.h  fmt.h  formatter.h  formatter.impl.h  fwd.h  indirect_device.h  instream.h  instream.impl.h  locale.h  memory_device.h  native_file_device.h  native_file_device_posix.impl.h  native_file_device_win32.impl.h  null_device.h  outstream.h  outstream.impl.h  readable.cpp  readable.h  readable.impl.h  reader.h  reader.impl.h  reader_options.h  scanner.h  scanner.impl.h  small_vector.h  span.h  span_old.h  spio.h  (+18 more)
03-new/include/spio/depend/: span.h
03-new/include/spio/locale/: ctype.h  facet.h  numpunct.h
03-new/include/spio/old/: config.h  file_device.h  (+7 more)
03-new/tests/: CMakeLists.txt  buffering.cpp  file.txt  formatter.cpp  instream.cpp  main.cpp  memory_device.cpp  spio.h  standard_streams.cpp  stream.cpp  stream_buffer.cpp  test_instream.cpp  test_readable_buffer.cpp  test_readable_file.cpp  test_span.cpp  test_stdstream.cpp  test_writable_file.cpp  test_writer.cpp  usertype.cpp
03-new/tests/old/: codeconv.cpp  error.cpp  readable_file.cpp  stream.cpp
03-new/tests/older/: main.cpp  threading.cpp  wchar.utf32.txt  writable_buffer.cpp  writable_file.cpp
benchmark/: CMakeLists.txt  bench_main.cpp  bench_readint.cpp  bench_readstring.cpp  bench_writehw.cpp  bench_writeint.cpp  bench_writestring.cpp  bench_writewstring.cpp  string_input.txt
benchmark/old/: bench_readint.cpp
examples/: examples.h  main.cpp  stdio.cpp
include/spio/: CMakeLists.txt  buffered_device.h  buffering.h  codeconv.h  config.h  container_device.h  custom_type.h  device_stream.h  error.h  file_device.h  file_device.impl.h  filehandle.h  fmt.h  formatter.h  formatter.impl.h  fwd.h  indirect_device.h  input_parser.h  input_parser.impl.h  instream.h  instream.impl.h  locale.h  memory_device.h  native_file_device.h  native_file_device_posix.impl.h  outstream.h  outstream.impl.h  readable.h  readable.impl.h  reader_options.h  scanner.h  span.h  spio.h  stl.h  stream.h  stream.impl.h  stream_base.h  stream_buffer.h  stream_iterator.h  stream_iterator.impl.h  (+10 more)
include/spio/depend/: fmt.h
include/spio/depend/span/: .clang-format  CMakeLists.txt  README.md  appveyor.yml
include/spio/locale/: locale.h
include/spio/old/: fmt.h  native_file_device.h  outstream.impl.h  scanner.h  scanner.impl.h  traits.h  util.impl.h
include/spio/older/: buffering.h  fmt.h  span.h
tests/: CMakeLists.txt  buffering.cpp  device.cpp  formatter.cpp  main.cpp  readable_file.cpp  spio.h  standard_streams.cpp  stream.cpp  stream_buffer.cpp  test_empty.cpp  test_instream.cpp  test_outstream.cpp  test_span.cpp  test_stdstream.cpp  test_util.cpp  test_writable_buffer.cpp  test_writable_file.cpp  threading.cpp  usertype.cpp  write.utf32.txt
tests/old/: main.cpp
tests/older/: write.utf32.txt
(+12 files in other folders)
