file(GLOB sources_tests *.cpp)
add_executable(tests ${sources_tests})
if(NOT SPIO_HEADER_ONLY)
    target_link_libraries(tests spio fmt)
else()
    target_link_libraries(tests fmt::fmt-header-only)
endif()
#target_compile_options(tests PRIVATE -fsanitize=address -fno-omit-frame-pointer)
#target_link_libraries(tests "-fsanitize=address")
add_test(NAME spio COMMAND tests)
